--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>devops-app.jar</finalName>
+		<finalName>dockerproject1</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
